# OS-Multithreaded-Download-Manager

./: CMakeLists.txt  README.md  main.cpp
include/: DownloadManager.hpp  DownloadTask.hpp  FileWritter.hpp  TaskQueue.hpp  ThreadPool.hpp
src/: DownloadManager.cpp  DownloadTask.cpp  FileWritter.cpp  TaskQueue.cpp  ThreadPool.cpp
